# surveycodex

./: .all-contributorsrc  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  parameters.html  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: check_style.yml  python-package.yml  python-publish.yml
api/: filter.html  helpers.html  survey.html  utilities.html
docs/: index.md  parameters.md  requirements.txt
docs/api/: filter.md  helpers.md  survey.md  utilities.md
docs/guides/: create-galaxy.md  getting-started.md  heritage.md
galcheat/: __init__.py  __main__.py  filter.py  helpers.py  rich.py  survey.py  utilities.py  zeropoints.py
galcheat/data/: CFHT.yaml  CFHTLS.yaml  COSMOS.yaml  DES.yaml  Euclid.yaml  Euclid_VIS.yaml  HSC.yaml  HST.yaml  LSST.yaml  README.md  Rubin.yaml
guides/: create-galaxy.html  getting-started.html  heritage.html  releases.html
scripts/: check_effective_wavelengths.py  check_zeropoints.py  effective_wavelengths.py  requirements.txt  zeropoints.py
search/: search_index.json
surveycodex/: __init__.py  __main__.py  helpers.py  rich.py  survey.py  utilities.py
surveycodex/data/: CFHTLS.yaml  Euclid_VIS.yaml  LSST.yaml
tests/: test_helpers.py  test_utilities.py
