[metadata]
name = galcheat
version = 0.1.2
description = Tiny library of galaxy surveys most useful parameters with units
long_description = file: README.md
long_description_content_type = text/markdown
author = Alexandre Boucaud
author_email = aboucaud@apc.in2p3.fr
license = MIT
url = https://github.com/aboucaud/galcheat
github_project = aboucaud/galcheat
platforms = any
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Astronomy
    Development Status :: 3 - Alpha

[options]
packages = find:
python_requires = >=3.7
install_requires =
    astropy>=4.3
    pyyaml>=5.1

[options.entry_points]
console_scripts =
    galcheat = galcheat.__main__:main

[options.package_data]
galcheat = data/*

[bdist_wheel]
universal = true

[tool:pytest]
minversion = 3.0
norecursedirs = scripts
addopts = --color=yes --verbose

[coverage:run]
source = galcheat
branch = True

[coverage:report]
show_missing = True
exclude_lines =
   # Have to re-enable the standard pragma
   pragma: no cover
   noqa
   # Don't complain about script hooks
   def main\(.*\):
   if __name__ == "__main__":
