[metadata]
name = surveycodex
description = Tiny library of galaxy surveys most useful parameters with units
long_description = file: README.md
long_description_content_type = text/markdown
author = Alexandre Boucaud
author_email = aboucaud@apc.in2p3.fr
license = MIT
url = https://github.com/LSSTDESC/surveycodex
github_project = LSSTDESC/surveycodex
platforms = any
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Astronomy
    Development Status :: 3 - Alpha
project_urls =
    Bug Tracker = https://github.com/LSSTDESC/surveycodex/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools>=40.0
    wheel
    setuptools_scm
install_requires =
    astropy>=4.3
    pyyaml>=5.1

[options.entry_points]
console_scripts =
    surveycodex = surveycodex.__main__:main

[options.extras_require]
dev =
    pre-commit>=2.17
    pytest>=6.0
    pytest-cov>=3.0
    pytest_astropy_header>=0.2
    rich>=13.7
docs =
    mkdocs>=1.2
    mkdocs-material>=8.2
    mkdocstrings>=0.18
    mkdocstrings-python>=1.9
    pytkdocs[numpy-style]>=0.16
scripts =
    speclite>=0.15

[options.package_data]
surveycodex = data/*

[bdist_wheel]
universal = true

[tool:pytest]
minversion = 3.0
norecursedirs = scripts
addopts = --color=yes --verbose
astropy_header = True

[coverage:run]
source = surveycodex
branch = True

[coverage:report]
show_missing = True
exclude_lines =
   # Have to re-enable the standard pragma
   pragma: no cover
   noqa
   # Don't complain about script hooks
   def main\(.*\):
   if __name__ == .__main__.:
